--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: grayyichen@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Gray's Blog
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://gray.github.io # the base hostname & protocol for your site
+url: http://grayyichen.github.io # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
 author: Gray Chen
 
